tests/unit-fail-compilation/j027b.c.ref
j027b.c:2:2: error: missing terminating " character [-Werror]
  "x
  ^
compilation terminated due to -Wfatal-errors.
cc1: all warnings being treated as errors
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors j027b.c to see commands run.
